Добавлена инструкция и новые иконки

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <header>
             <h1>Почта МУП ЖКХ г. Гатчины</h1>
             <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email"></a>
+            <a href="instrution.html" target="_blank"><img src="img/instr.png" alt="Инструкция"></a>
         </header>
-        <main>
+        <!-- <main>
             Какая то информация о МУП ЖКХ г.Гатчины
         </main>
         <footer>
             Реквизиты МУП ЖКХг.Гатчины
-        </footer>
+        </footer> -->
     </div>
     <script src="script.js"></script>
 </body>
