--- a/instrution.html
+++ b/instrution.html
@@ -4,25 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Инструкция</title>
 </head>
 <body>
-    <h1>Инструкция по подключению почтовых клиентов</h1>
-    <h2>Как настроить почтовый клиент The Bat!?</h2>
-    <p> Выберите в меню программы пункт «Ящик / Новый почтовый ящик...».<br>
-        В открывшемся окне укажите ваше имя, адрес почтового ящика и пароль, который вы задали при его создании.<br>
-        Нажмите кнопку «Далее» и на новом экране укажите настройки входящей почты:<br>
-        Протокол: IMAP<br>
-        Адрес сервера: mail.jino.ru<br>
-        Соединение: безопасное на станд. порту (STARTTLS)<br>
-        Порт: 143<br>
-        Имя пользователя: имя ящика полностью (например, info@ваш-домен.ru)<br>
-        Снова нажмите «Далее» и укажите настройки исходящей почты:<br>
-        Адрес сервера исходящей почты: smtp.jino.ru<br>
-        Соединение: безопасное на станд. порту (STARTTLS)<br>
-        Порт: 587<br>
-        Аутентификация: Зашифрованный пароль<br>
-        Галочка «Мой сервер SMTP требует аутентификации» должна быть установлена.<br>
-        Еще раз нажмите «Далее», затем — «Готово».</p>
+    <div class="container">
+        <ul>
+            <li>
+                <h1>Настройка почтовых клиентов</h1>
+                Почтовый клиент — программа для получения, написания и хранения электронных писем.<br>
+                <br>
+                Чаще всего почтовый клиент входит в стандартную поставку любой операционной системы:<br>
+                <br>
+                для Windows — Windows Mail;<br>
+                для Mac OS — Apple Mail;<br>
+                для iOS, Android — стандартные программы для смартфонов.<br>
+                Также есть множество других почтовых клиентов, которые можно скачать и установить самостоятельно.<br> 
+                Один из самых популярных — Mozilla Thunderbird (opens new window)— работает в операционных системах Windows, Mac OS X и Linux.<br>
+                <br>
+                Основные настройки для почтовых клиентов:<br>
+                <br>
+                Сервер входящей почты (IMAP, рекомендуется): mail.jino.ru, порт 143<br>
+                Сервер входящей почты (POP3): mail.jino.ru, порт 110<br>
+                Сервер для отправки почты (SMTP): smtp.jino.ru, порт 587<br>
+                Имя пользователя: название почтового ящика целиком (например: my_mail@gkh47.ru)<br>
+                Пароль: тот пароль, который вы указали при создании ящика<br>
+                Шифрование: STARTTLS или SSL/TLS<br>
+                При отправке почты нужно использовать SMTP-аутентификацию, логин и пароль — такие же, как для входящей почты.<br> 
+                Если вы используете шифрование SSL/TLS, порт IMAP-сервера — 993, SMTP-сервера — 465.<br>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
