--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Почта МУП ЖКХ г. Гатчины</h1>
+            <h1>Почта <br> МУП ЖКХ г. Гатчины</h1>
             <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email"></a>
             <a href="instrution.html" target="_blank"><img src="img/instr.png" alt="Инструкция"></a>
         </header>
