Добавил ссылку на файлообменник

--- a/instrution.html
+++ b/instrution.html
@@ -33,6 +33,18 @@
                 При отправке почты нужно использовать SMTP-аутентификацию, логин и пароль — такие же, как для входящей почты.<br> 
                 Если вы используете шифрование SSL/TLS, порт IMAP-сервера — 993, SMTP-сервера — 465.<br>
             </li>
+            <li>
+                <h1>Автоматическая настройка почтовых клиентов</h1>
+                Для автоматической настройки почтового клиента вам нужно будет указать только имя отправителя, e-mail и пароль.
+                <br>
+                Автонастройка доступна в следующих клиентах:<br>
+                <br>
+                для ОС Windows — Microsoft Outlook, Windows Mail, Mozilla Thunderbird;<br>
+                для ОС Linux — Mozilla Thunderbird;<br>
+                для ОС iOS — iOS Mail;<br>
+                для ОС macOS — macOS Mail;<br>
+                для ОС Android — Microsoft Outlook, myMail.<br>
+            </li>
         </ul>
     </div>
 </body>
