--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h1>Почта <br> МУП ЖКХ г. Гатчины</h1>
             <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email"></a>
             <a href="instrution.html" target="_blank"><img src="img/instr.png" alt="Инструкция"></a>
+            <a href="https://dropmefiles.com/" target="_blank"><img src="img/drop.png" alt="Обмен файлами"></a>
         </header>
         <!-- <main>
             Какая то информация о МУП ЖКХ г.Гатчины
