--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="container">
         <header>
             <h1>МУП ЖКХ г. Гатчины</h1>
-            <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email"></a>
-            <a href="instrution.html" target="_blank"><img src="img/instr.png" alt="Инструкция"></a>
-            <a href="https://dropmefiles.com/" target="_blank"><img src="img/drop.png" alt="Обмен файлами"></a>
+            <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email" class="scale"></a>
+            <a href="instrution.html" target="_blank"><img src="img/instr.png" alt="Инструкция" class="scale"></a>
+            <a href="https://dropmefiles.com/" target="_blank"><img src="img/drop.png" alt="Обмен файлами" class="scale"></a>
         </header>
         <!-- <main>
             Какая то информация о МУП ЖКХ г.Гатчины
