--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>МУП ЖКХ г. Гатчины</h1>
-            <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email" class="scale"></a>
-            <a href="instrution.html" target="_blank"><img src="img/instr.png" alt="Инструкция" class="scale"></a>
-            <a href="https://dropmefiles.com/" target="_blank"><img src="img/drop.png" alt="Обмен файлами" class="scale"></a>
+        <header class="header">
+            <h1 class="header__logo">МУП ЖКХ г.Гатчины</h1>
         </header>
-        <!-- <main>
-            Какая то информация о МУП ЖКХ г.Гатчины
+        <main class="main">
+            <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email" class="scale img"></a>
+            <a href="instrution.html" target="_blank"><img src="img/instr.png" alt="Инструкция" class="scale img"></a>
+            <a href="https://dropmefiles.com/" target="_blank"><img src="img/drop.png" alt="Обмен файлами" class="scale img"></a>
         </main>
-        <footer>
-            Реквизиты МУП ЖКХг.Гатчины
-        </footer> -->
+        <footer class="footer">
+            <div class="footer__content">
+                <h2>Реквизиты МУП ЖКХ г.Гатчины</h2>
+            </div>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
