--- a/instrution.html
+++ b/instrution.html
@@ -9,43 +9,46 @@
 </head>
 <body>
     <div class="container">
-        <ul>
-            <li>
-                <h1>Настройка почтовых клиентов</h1>
-                Почтовый клиент — программа для получения, написания и хранения электронных писем.<br>
-                <br>
-                Чаще всего почтовый клиент входит в стандартную поставку любой операционной системы:<br>
-                <br>
-                для Windows — Windows Mail;<br>
-                для Mac OS — Apple Mail;<br>
-                для iOS, Android — стандартные программы для смартфонов.<br>
-                Также есть множество других почтовых клиентов, которые можно скачать и установить самостоятельно.<br> 
-                Один из самых популярных — Mozilla Thunderbird (opens new window)— работает в операционных системах Windows, Mac OS X и Linux.<br>
-                <br>
-                Основные настройки для почтовых клиентов:<br>
-                <br>
-                Сервер входящей почты (IMAP, рекомендуется): mail.jino.ru, порт 143<br>
-                Сервер входящей почты (POP3): mail.jino.ru, порт 110<br>
-                Сервер для отправки почты (SMTP): smtp.jino.ru, порт 587<br>
-                Имя пользователя: название почтового ящика целиком (например: my_mail@gkh47.ru)<br>
-                Пароль: тот пароль, который вы указали при создании ящика<br>
-                Шифрование: STARTTLS или SSL/TLS<br>
-                При отправке почты нужно использовать SMTP-аутентификацию, логин и пароль — такие же, как для входящей почты.<br> 
-                Если вы используете шифрование SSL/TLS, порт IMAP-сервера — 993, SMTP-сервера — 465.<br>
-            </li>
-            <li>
-                <h1>Автоматическая настройка почтовых клиентов</h1>
-                Для автоматической настройки почтового клиента вам нужно будет указать только имя отправителя, e-mail и пароль.
-                <br>
-                Автонастройка доступна в следующих клиентах:<br>
-                <br>
-                для ОС Windows — Microsoft Outlook, Windows Mail, Mozilla Thunderbird;<br>
-                для ОС Linux — Mozilla Thunderbird;<br>
-                для ОС iOS — iOS Mail;<br>
-                для ОС macOS — macOS Mail;<br>
-                для ОС Android — Microsoft Outlook, myMail.<br>
-            </li>
-        </ul>
+        <div class="container__instr">
+            <ul>
+                <li>
+                    <h1>Настройка почтовых клиентов</h1><br>
+                    Почтовый клиент — программа для получения, написания и хранения электронных писем.<br>
+                    <br>
+                    Чаще всего почтовый клиент входит в стандартную поставку любой операционной системы:<br>
+                    <br>
+                    для Windows — Windows Mail;<br>
+                    для Mac OS — Apple Mail;<br>
+                    для iOS, Android — стандартные программы для смартфонов.<br>
+                    Также есть множество других почтовых клиентов, которые можно скачать и установить самостоятельно.<br> 
+                    Один из самых популярных — Mozilla Thunderbird (opens new window)— работает в операционных системах Windows, Mac OS X и Linux.<br>
+                    <br>
+                    Основные настройки для почтовых клиентов:<br>
+                    <br>
+                    Сервер входящей почты (IMAP, рекомендуется): mail.jino.ru, порт 143<br>
+                    Сервер входящей почты (POP3): mail.jino.ru, порт 110<br>
+                    Сервер для отправки почты (SMTP): smtp.jino.ru, порт 587<br>
+                    Имя пользователя: название почтового ящика целиком (например: my_mail@gkh47.ru)<br>
+                    Пароль: тот пароль, который вы указали при создании ящика<br>
+                    Шифрование: STARTTLS или SSL/TLS<br>
+                    При отправке почты нужно использовать SMTP-аутентификацию, логин и пароль — такие же, как для входящей почты.<br> 
+                    Если вы используете шифрование SSL/TLS, порт IMAP-сервера — 993, SMTP-сервера — 465.<br>
+                </li><br>
+                <li>
+                    <h1>Автоматическая настройка почтовых клиентов</h1><br>
+                    Для автоматической настройки почтового клиента вам нужно будет указать только имя отправителя, e-mail и пароль.
+                    <br>
+                    Автонастройка доступна в следующих клиентах:<br>
+                    <br>
+                    для ОС Windows — Microsoft Outlook, Windows Mail, Mozilla Thunderbird;<br>
+                    для ОС Linux — Mozilla Thunderbird;<br>
+                    для ОС iOS — iOS Mail;<br>
+                    для ОС macOS — macOS Mail;<br>
+                    для ОС Android — Microsoft Outlook, myMail.<br>
+                </li>
+            </ul>
+        </div>
+       
     </div>
 </body>
 </html>
