версия 1, добавлены картинки, кнопка назад (в инструкции), и доработан дизайн

--- a/instr.html
+++ b/instr.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Инструкция</title>
 </head>
+
 <body>
     <div class="container">
-        <div class="container__instr">
+        <div class="main main__instr">
+            <div class="main__instr__back">
+                <a href="index.html"><img src="img/btn-back.png" alt="Назад" class="scale img_back"></a>
+            </div>
             <ul>
                 <li>
                     <h1>Настройка почтовых клиентов</h1><br>
@@ -20,8 +25,10 @@
                     для Windows — Windows Mail;<br>
                     для Mac OS — Apple Mail;<br>
                     для iOS, Android — стандартные программы для смартфонов.<br>
-                    Также есть множество других почтовых клиентов, которые можно скачать и установить самостоятельно.<br> 
-                    Один из самых популярных — Mozilla Thunderbird (opens new window)— работает в операционных системах Windows, Mac OS X и Linux.<br>
+                    Также есть множество других почтовых клиентов, которые можно скачать и установить
+                    самостоятельно.<br>
+                    Один из самых популярных — Mozilla Thunderbird (opens new window)— работает в операционных системах
+                    Windows, Mac OS X и Linux.<br>
                     <br>
                     Основные настройки для почтовых клиентов:<br>
                     <br>
@@ -31,12 +38,14 @@
                     Имя пользователя: название почтового ящика целиком (например: my_mail@gkh47.ru)<br>
                     Пароль: тот пароль, который вы указали при создании ящика<br>
                     Шифрование: STARTTLS или SSL/TLS<br>
-                    При отправке почты нужно использовать SMTP-аутентификацию, логин и пароль — такие же, как для входящей почты.<br> 
+                    При отправке почты нужно использовать SMTP-аутентификацию, логин и пароль — такие же, как для
+                    входящей почты.<br>
                     Если вы используете шифрование SSL/TLS, порт IMAP-сервера — 993, SMTP-сервера — 465.<br>
                 </li><br>
                 <li>
                     <h1>Автоматическая настройка почтовых клиентов</h1><br>
-                    Для автоматической настройки почтового клиента вам нужно будет указать только имя отправителя, e-mail и пароль.
+                    Для автоматической настройки почтового клиента вам нужно будет указать только имя отправителя,
+                    e-mail и пароль.
                     <br>
                     Автонастройка доступна в следующих клиентах:<br>
                     <br>
@@ -48,7 +57,22 @@
                 </li>
             </ul>
         </div>
-       
+
+        <footer class="footer">
+            <div class="footer__content">
+                <h3>&copy Корпоративная почта МУП ЖКХ г.Гатчины</h3>
+                <div class="footer__requisits">
+                    Юридический адрес: 188300, Ленинградская область, Гатчинский район, город Гатчина, Соборная ул., д.1
+                    <br>
+                    ИНН: 4705001297
+                    КПП: 470501001
+                    ОГРН: 1024701243401
+                    ОКПО: 03324134
+                    ОКТМО: 41618101001
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
+
 </html>
