--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
 </head>
 <body>
     <div class="container">
-        <header class="header">
-            <h1 class="header__logo">МУП ЖКХ г.Гатчины</h1>
-        </header>
-        <main class="main">
+        <main class="main main__index">
+            <div class="header">
+                <h1 class="header__logo">Муниципальное унитарное предприятие<br>Жилищно-коммунальное хозяйство г. Гатчины</h1>
+            </div>
             <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email" class="scale img"></a>
-            <a href="instrution.html" target="_blank"><img src="img/instr.png" alt="Инструкция" class="scale img"></a>
-            <a href="https://dropmefiles.com/" target="_blank"><img src="img/drop.png" alt="Обмен файлами" class="scale img"></a>
+            <a href="instr.html"><img src="img/instr.png" alt="Инструкция" class="scale img"></a>
+            <a href="https://dropmefiles.com/"><img src="img/drop.png" alt="Обмен файлами" class="scale img"></a>
         </main>
         <footer class="footer">
             <div class="footer__content">
-                <h2>Реквизиты МУП ЖКХ г.Гатчины</h2>
+                <h3>&copy Корпоративная почта МУП ЖКХ г.Гатчины</h3>
+                <div class="footer__requisits">
+                    Юридический адрес: 188300, Ленинградская область, Гатчинский район, город Гатчина, Соборная ул., д.1 <br>
+                    ИНН: 4705001297
+                    КПП: 470501001
+                    ОГРН: 1024701243401
+                    ОКПО: 03324134
+                    ОКТМО: 41618101001
+                </div>  
             </div>
         </footer>
     </div>
