--- a/index.html
+++ b/index.html
@@ -11,22 +11,37 @@
     <div class="container">
         <main class="main main__index">
             <div class="header">
-                <h1 class="header__logo">Муниципальное унитарное предприятие<br>Жилищно-коммунальное хозяйство г. Гатчины</h1>
+                <h1 class="adaptive-header header__logo">
+                    <span class="desktop-header">Муниципальное унитарное предприятие<br>Жилищно-коммунальное хозяйство г. Гатчины</span>
+                    <span class="mobile-header">МУП ЖКХ г.Гатчины</span>
+                </h1>
             </div>
-            <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email" class="scale img"></a>
-            <a href="instr.html"><img src="img/instr.png" alt="Инструкция" class="scale img"></a>
-            <a href="https://dropmefiles.com/"><img src="img/drop.png" alt="Обмен файлами" class="scale img"></a>
+            <div class="header__links">
+                <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email" class="scale img"></a>
+                <a href="instr.html"><img src="img/instr.png" alt="Инструкция" class="scale img"></a>
+                <a href="https://dropmefiles.com/"><img src="img/drop.png" alt="Обмен файлами" class="scale img"></a>
+            </div>
         </main>
         <footer class="footer">
             <div class="footer__content">
-                <h3>&copy Корпоративная почта МУП ЖКХ г.Гатчины</h3>
-                <div class="footer__requisits">
-                    Юридический адрес: 188300, Ленинградская область, Гатчинский район, город Гатчина, Соборная ул., д.1 <br>
-                    ИНН: 4705001297
-                    КПП: 470501001
-                    ОГРН: 1024701243401
-                    ОКПО: 03324134
-                    ОКТМО: 41618101001
+                <div class="adaptive-header">
+                    <span class="desktop-header">
+                        <h3>&copy Корпоративная почта МУП ЖКХ г.Гатчины</h3>
+                        <p>
+                            Юридический адрес: 188300, Ленинградская область, Гатчинский район, город Гатчина, Соборная ул., д.1 <br>
+                            ИНН: 4705001297
+                            КПП: 470501001
+                            ОГРН: 1024701243401
+                            ОКПО: 03324134
+                            ОКТМО: 41618101001
+                        </p> 
+                    </span>
+                    <span class="mobile-header">
+                        <h3>&copy Почта МУП ЖКХ г.Гатчины</h3>
+                        <p>
+                            Адрес: 188300, ЛО, г.Гатчина, Соборная ул. д.1
+                        </p>
+                    </span>
                 </div>  
             </div>
         </footer>
