Добавил исправления для страницы Инструкции

--- a/instr.html
+++ b/instr.html
@@ -60,15 +60,25 @@
 
         <footer class="footer">
             <div class="footer__content">
-                <h3>&copy Корпоративная почта МУП ЖКХ г.Гатчины</h3>
-                <div class="footer__requisits">
-                    Юридический адрес: 188300, Ленинградская область, Гатчинский район, город Гатчина, Соборная ул., д.1
-                    <br>
-                    ИНН: 4705001297
-                    КПП: 470501001
-                    ОГРН: 1024701243401
-                    ОКПО: 03324134
-                    ОКТМО: 41618101001
+                <div class="adaptive-header">
+                    <span class="desktop-header">
+                        <h3>&copy Корпоративная почта МУП ЖКХ г.Гатчины</h3>
+                        <p>
+                            Юридический адрес: 188300, Ленинградская область, Гатчинский район, город Гатчина, Соборная
+                            ул., д.1 <br>
+                            ИНН: 4705001297
+                            КПП: 470501001
+                            ОГРН: 1024701243401
+                            ОКПО: 03324134
+                            ОКТМО: 41618101001
+                        </p>
+                    </span>
+                    <span class="mobile-header">
+                        <h3>&copy Почта МУП ЖКХ г.Гатчины</h3>
+                        <p>
+                            Адрес: 188300, ЛО, г.Гатчина, Соборная ул. д.1
+                        </p>
+                    </span>
                 </div>
             </div>
         </footer>
