Добавление информации о предприятии и реквизитах

--- a/index.html
+++ b/index.html
@@ -22,12 +22,23 @@
                 <a href="instr.html"><img src="img/instr.png" alt="Инструкция" class="scale img"></a>
                 <a href="https://dropmefiles.com/"><img src="img/drop.png" alt="Обмен файлами" class="scale img"></a>
             </div>
+            <section class="section">
+                <p>МУП ЖКХ г.Гатчины является предприятием, занимающимся оказанием услуг в области жилищно-коммунального хозяйства на территории города Гатчина.<br><br>
+                    Основными видами деятельности МУП ЖКХ г.Гатчины являются:<br>
+                    <ul class="section__list">
+                        <li>эксплуатация и обслуживание многоквартирных домов;</li>
+                        <li>управление жилищным фондом и оказание услуг населению;</li>
+                        <li>выполнение ремонтных и строительных работ.</li>
+                    </ul>
+
+                    МУП ЖКХ г.Гатчины осуществляет свою деятельность в соответствии с законодательством РФ и муниципальными нормативами, а также придерживается принципов эффективности, надежности и доступности услуг для населения. Для обеспечения качественного выполнения работ на предприятии имеется высококвалифицированный персонал и современное оборудование.</p>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer__content">
                 <div class="adaptive-header">
+                    <h3>&copy МУП ЖКХ г.Гатчины, +7 (813 71) 221-36, gkh@gtn.ru, info@gkh47.ru</h3>
                     <span class="desktop-header">
-                        <h3>&copy Корпоративная почта МУП ЖКХ г.Гатчины</h3>
                         <p>
                             Юридический адрес: 188300, Ленинградская область, Гатчинский район, город Гатчина, Соборная ул., д.1 <br>
                             ИНН: 4705001297
@@ -38,7 +49,6 @@
                         </p> 
                     </span>
                     <span class="mobile-header">
-                        <h3>&copy Почта МУП ЖКХ г.Гатчины</h3>
                         <p>
                             Адрес: 188300, ЛО, г.Гатчина, Соборная ул. д.1
                         </p>
