--- a/instr.html
+++ b/instr.html
@@ -17,7 +17,7 @@
                 <a href="index.html"><img src="img/btn-back.png" alt="Назад" class="scale img_back"></a>
             </div>
             <ul>
-                <li>
+                <li class="main__instr_item">
                     <h1>Настройка почтовых клиентов</h1><br>
                     Почтовый клиент — программа для получения, написания и хранения электронных писем.<br>
                     <br>
@@ -43,7 +43,7 @@
                     входящей почты.<br>
                     Если вы используете шифрование SSL/TLS, порт IMAP-сервера — 993, SMTP-сервера — 465.<br>
                 </li><br>
-                <li>
+                <li class="main__instr_item">
                     <h1>Автоматическая настройка почтовых клиентов</h1><br>
                     Для автоматической настройки почтового клиента вам нужно будет указать только имя отправителя,
                     e-mail и пароль.
@@ -62,8 +62,8 @@
         <footer class="footer">
             <div class="footer__content">
                 <div class="adaptive-header">
+                    <h3>&copy МУП ЖКХ г.Гатчины, +7 (813 71) 221-36, gkh@gtn.ru, info@gkh47.ru</h3>
                     <span class="desktop-header">
-                        <h3>&copy Корпоративная почта МУП ЖКХ г.Гатчины</h3>
                         <p>
                             Юридический адрес: 188300, Ленинградская область, Гатчинский район, город Гатчина, Соборная
                             ул., д.1 <br>
@@ -75,7 +75,6 @@
                         </p>
                     </span>
                     <span class="mobile-header">
-                        <h3>&copy Почта МУП ЖКХ г.Гатчины</h3>
                         <p>
                             Адрес: 188300, ЛО, г.Гатчина, Соборная ул. д.1
                         </p>
