Добавление информации о предприятии и реквизитах (адаптив)

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <footer class="footer">
             <div class="footer__content">
                 <div class="adaptive-header">
-                    <h3>&copy МУП ЖКХ г.Гатчины, +7 (813 71) 221-36, gkh@gtn.ru, info@gkh47.ru</h3>
                     <span class="desktop-header">
+                        <h3>&copy МУП ЖКХ г.Гатчины, +7 (813 71) 221-36, gkh@gtn.ru, info@gkh47.ru</h3>
                         <p>
                             Юридический адрес: 188300, Ленинградская область, Гатчинский район, город Гатчина, Соборная ул., д.1 <br>
                             ИНН: 4705001297
@@ -49,6 +49,7 @@
                         </p> 
                     </span>
                     <span class="mobile-header">
+                        <h3>&copy МУП ЖКХ г.Гатчины</h3>
                         <p>
                             Адрес: 188300, ЛО, г.Гатчина, Соборная ул. д.1
                         </p>
