--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Почта МУП ЖКХ</title>
 </head>
-<body>
+<body onload="startTime()">
     <div class="container">
         <main class="main main__index">
             <div class="header">
@@ -16,6 +16,7 @@
                     <span class="desktop-header">Муниципальное унитарное предприятие<br>Жилищно-коммунальное хозяйство г. Гатчины</span>
                     <span class="mobile-header">МУП ЖКХ г.Гатчины</span>
                 </h1>
+                <div id="timer" class="header__timer"></div>
             </div>
             <div class="header__links">
                 <a href="https://webmail.jino.ru/"><img src="img/email.png" alt="Email" class="scale img"></a>
