Добавил идущее время и дату на сайт

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/icon.svg">
     <link rel="stylesheet" href="style.css">
-    <title>Почта МУП ЖКХ</title>
+    <title>МУП ЖКХ г.Гатчины</title>
 </head>
 <body onload="startTime()">
     <div class="container">
@@ -52,7 +52,9 @@
                     <span class="mobile-header">
                         <h3>&copy МУП ЖКХ г.Гатчины</h3>
                         <p>
-                            Адрес: 188300, ЛО, г.Гатчина, Соборная ул. д.1
+                            Адрес: 188300, ЛО, г.Гатчина, Соборная ул. д.1<br>
+                            ИНН: 4705001297
+                            КПП: 470501001
                         </p>
                     </span>
                 </div>  
