--- a/instr.html
+++ b/instr.html
@@ -77,7 +77,9 @@
                     <span class="mobile-header">
                         <h3>&copy МУП ЖКХ г.Гатчины</h3>
                         <p>
-                            Адрес: 188300, ЛО, г.Гатчина, Соборная ул. д.1
+                            Адрес: 188300, ЛО, г.Гатчина, Соборная ул. д.1<br>
+                            ИНН: 4705001297
+                            КПП: 470501001
                         </p>
                     </span>
                 </div>
